--- a/src/localization/messages_fi.json
+++ b/src/localization/messages_fi.json
@@ -1,14 +1,14 @@
  {
     "required": "Tämä kenttä on pakollinen.",
     "remote": "Korjaa tämä kenttä.",
-    "email": "Syötä oikeanmuotoinen sähköpostiosoite.",
-    "url": "Syötä oikeanmuotoinen verkkotunnus.",
-    "date": "Syötä oikeanmuotoinen päivämäärä.",
-    "dateISO": "Syötä oikeanmuotoinen ISO-standardin mukainen päivämäärä.",
-    "number": "Syötä oikeanmuotoinen numero.",
+    "email": "Syötä sähköpostiosoite oikeassa muodossa.",
+    "url": "Syötä verkkotunnus oikeassa muodossa.",
+    "date": "Syötä päivämäärä oikeassa muodossa.",
+    "dateISO": "Syötä ISO-standardin mukainen päivämäärä oikeassa muodossa.",
+    "number": "Syötä numero oikeassa muodossa.",
     "digits": "Syötä vain numeroita.",
     "signedDigits": "Syötä vain etumerkillisiä (+ tai -) numeroita.",
-    "creditcard": "Syötä oikeanmuotoinen luottokorttinumero.",
+    "creditcard": "Syötä luottokorttinumero oikeassa muodossa.",
     "equalTo": "Syötä sama arvo uudelleen.",
     "maxlength": "Syötä enintään {MaxLength} merkkiä.",
     "minlength": "Syötä vähintään {MinLength} merkkiä.",
