sync messages_fi.json to match .ts file contents

--- a/src/localization/messages_fi.json
+++ b/src/localization/messages_fi.json
@@ -1,28 +1,28 @@
- {
-    "required": "Tämä kenttä on pakollinen.",
-    "remote": "Korjaa tämä kenttä.",
+{
+    "required": "Kenttä on pakollinen.",
+    "remote": "Korjaa kenttä.",
     "email": "Syötä sähköpostiosoite oikeassa muodossa.",
     "url": "Syötä verkkotunnus oikeassa muodossa.",
     "date": "Syötä päivämäärä oikeassa muodossa.",
-    "dateISO": "Syötä ISO-standardin mukainen päivämäärä oikeassa muodossa.",
+    "dateISO": "Syötä ISO-standardin mukainen päivämäärä.",
     "number": "Syötä numero oikeassa muodossa.",
     "digits": "Syötä vain numeroita.",
     "signedDigits": "Syötä vain etumerkillisiä (+ tai -) numeroita.",
-    "creditcard": "Syötä luottokorttinumero oikeassa muodossa.",
+    "creditcard": "Syötä korttinumero oikeassa muodossa.",
     "equalTo": "Syötä sama arvo uudelleen.",
     "maxlength": "Syötä enintään {MaxLength} merkkiä.",
     "minlength": "Syötä vähintään {MinLength} merkkiä.",
-    "rangelength": "Syötä arvo joka on {MinLength} - {MaxLength} merkkiä pitkä",
-    "range": "Syötä arvo joka on välillä {Min} - {Max}.",
-    "max": "Syötä arvo joka on enintään {Max}.",
-    "min": "Syötä arvo joka on vähintään {Min}.",
-    "step": "Syötä arvo joka kasvaa/vähenee {Step}:lla.",
-    "contains": "Syötä arvo joka sisältyy annettuihin vaihtoehtoihin. Syöttämäsi arvo '{AttemptedValue}'.",
+    "rangelength": "Syötä {MinLength} - {MaxLength} merkkiä pitkä arvo",
+    "range": "Syötä välillä {Min} - {Max} välillä oleva arvo.",
+    "max": "Syötä arvo, joka on enintään {Max}.",
+    "min": "Syötä arvo, joka on vähintään {Min}.",
+    "step": "Syötämäsi arvon tulee kasvaa/vähentyä luvulla {Step}",
+    "contains": "Syöttämäsi arvo '{AttemptedValue}' ei sisälly annettuihin vaihtoehtoihin.",
     "mask": "Syötä vastaava arvo kuin {Mask}.",
-    "minItems":"Syötä vähintään {Min} kohtaa.",
-    "maxItems":"Syötä enintään {Max} kohtaa.",
-    "uniqItems":"Syötä ainoastaan uniikkeja arvoja.",
-    "enum":"Syötä arvo joka sisältyy sallittuihin vaihtoehtoihin.",
-    "type":"Syötä arvo joka on tyypiltään '{Type}'.",
-    "multipleOf":"Syötä arvo joka on numeron {Divider} monikerta."
+    "minItems": "Syötä vähintään {Min} kohtaa.",
+    "maxItems": "Syötä enintään {Max} kohtaa.",
+    "uniqItems": "Syötä ainoastaan uniikkeja arvoja.",
+    "enum": "Syötä arvo joka sisältyy sallittuihin vaihtoehtoihin.",
+    "type": "Syötä arvo joka on tyypiltään '{Type}'.",
+    "multipleOf": "Syötä luvun {Divider} monikerta."
 }
